# adventofcode2022

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs  util.rs
src/day01/: mod.rs  solve.rs  test.rs
src/day02/: mod.rs  solve.rs  test.rs
src/day03/: mod.rs  solve.rs  test.rs
src/day04/: mod.rs  solve.rs  test.rs
src/day05/: mod.rs  solve.rs  test.rs
src/day06/: mod.rs  solve.rs  test.rs
src/day07/: mod.rs
src/day10/: mod.rs
template/: cargo-generate.toml
template/day{{day}}/: mod.rs  solve.rs  test.rs
